# ai-fixer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
app/: main.py
custom_plugins/: README.md
deploy/: docker-compose.prod.yml
docs/: .gitignore  CNAME  README.md  _config.yml  api.md  architecture.md  configuration.md  deployment.md  frontend.md  getting-started.md  index.md  package-lock.json  package.json  plugins.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_config.py  test_db_models.py  test_db_session.py  test_graph_state.py  test_lark_cards.py  test_lark_client.py  test_lark_commands.py  test_lark_detector.py  test_llm_anthropic.py  test_llm_base.py  test_llm_factory.py  test_llm_openai.py  test_main.py  test_node_await_approval.py  test_node_diagnose.py  test_node_escalate.py  test_node_execute.py  test_node_ingest.py  test_node_propose.py  test_node_resolve.py  test_node_triage.py  test_node_verify.py  test_plugin_base.py  test_plugin_k8s_cordon_node.py  test_plugin_k8s_delete_evicted_pods.py  test_plugin_k8s_describe_node.py  test_plugin_k8s_describe_pod.py  test_plugin_k8s_get_events.py  test_plugin_k8s_get_pod_logs.py  test_plugin_k8s_list_pods.py  test_plugin_k8s_restart_pod.py  test_plugin_k8s_rollback_deployment.py  test_plugin_k8s_scale_deployment.py  test_plugin_k8s_top_pods.py  test_plugin_llm_kubectl_action.py  test_plugin_loki_query.py  (+10 more)
(+186 files in other folders)
