[project]
name = "ai-fixer"
version = "0.1.0"
description = "Intelligent ops repair agent with LLM-powered diagnosis, auto-fix with safety fences, and incident learning"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "anthropic>=0.40",
    "openai>=1.55",
    "structlog>=24.4",
    "jsonschema>=4.23",
    "httpx>=0.27",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "lark-oapi>=1.6.6",
    "jinja2>=3.1",
    "redis>=5.2",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "prometheus-client>=0.21",
    "pgvector>=0.4.2",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-jsonschema>=4.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true
